# Qfort_opx1000

./: .gitignore  README.md  pyproject.toml  qua_config.json
algo/: quantum_teleportation_feed_forward.py  quantum_teleportation_post_processing.py
calibration_graph/: 00_close_other_qms.py  00_delay.py  00_hello_qua.py  01a_mixer_calibration.py  01b_time_of_flight.py  01b_time_of_flight_mw_fem.py  02a_Resonator_Spectroscopy.py  02a_Resonator_Spectroscopy_TWPA_frequency.py  02a_Resonator_Spectroscopy_TWPA_gain.py  02b_Resonator_Spectroscopy_vs_Flux.py  02b_resonator_spectroscopy_vs_flux.py  02b_resonator_spectroscopy_vs_flux_.py  02b_resonator_spectroscopy_vs_flux_ShihhsiangdeAir_Mar-19-162418-2025_CaseConflict.py  02c_resonator_spectroscopy_vs_amplitude.py  03a_Qubit_Spectroscopy.py  03b_qubit_spectroscopy_vs_flux.py  03b_qubit_spectroscopy_vs_flux_ShihhsiangdeAir_Feb-23-163915-2025_CaseConflict.py  04_Power_Rabi.py  04_Power_Rabi_1.py  05_T1.py  05b_T2_under_iSWAP.py  05b_T2ey.py  05c_T1_under_iSWAP.py  06_Ramsey.py  06_Ramsey_waveform_report.py  07a_Readout_Frequency_Optimization.py  07a_Readout_Frequency_Power_Optimization.py  07b_IQ_Blobs.py  07b_IQ_Blobs1.py  07b_IQ_Blobs_active_test.py  07b_IQ_Blobs_debug.py  07c_Readout_Power_Optimization.py  08_Ramsey_vs_Flux_Calibration.py  09a_Stark_Detuning.py  09b_DRAG_Calibration_180_minus_180.py  09c_DRAG_Calibration_180_90.py  09c_DRAG_Calibration_180_90_extra_offset.py  100a_Quantum_Memory.py  100a_Quantum_Memory1.py  100a_Random_state.py  (+70 more)
calibration_graph_modified/: 00_Close_Other_QMs.ipynb
calibrations/: 02a1_resonator_spectroscopy_TWPA_gain.py  02a2_resonator_spectroscopy_TWPA_frequency.py  02a_resonator_spectroscopy.py  02b_resonator_spectroscopy_vs_power.py  02c_resonator_spectroscopy_vs_flux.py  03a_qubit_spectroscopy.py  08c_TWPA_pump_optimization.py
configuration/: add_twpa.py  make_quam.py  make_wiring_lffem_mwfem.py  modify_quam.py
instrument/: TWPA_pump.py
quam_config/: generate_quam.py  populate_quam_lf_mw_fems.py
quam_libs/: QI_function.py  QM_analyze.py  fit_ellipsoid.py  macros.py
quam_libs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
random_exp/: 120b_Gate_Set_Tomography_imperfect_data_processing.py
standard_gst_checkpoints/: StandardGST_CPTPLND_iteration_0.json  StandardGST_CPTPLND_iteration_1.json  StandardGST_CPTPLND_iteration_2.json  StandardGST_CPTPLND_iteration_3.json  StandardGST_CPTPLND_iteration_4.json  StandardGST_Target_iteration_0.json  StandardGST_Target_iteration_1.json  (+8 more)
(+69 files in other folders)
