[project]
name = "quam_libs"
version = "0.1.0"
description = "QuAM Components for Quantum Control"
readme = "README.md"
authors = [
    {name = "Dean Poulos", email = "dean.poulos@quantum-machines.co"}
]
requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.6.6",
    "jupyter>=1.1.1",
    "lmfit>=1.3.3",
    "pennylane>=0.41.1",
    "qiskit==1.4.2",
    "qiskit-experiments>=0.10.0",
    "qm-qua==1.2.1",
    "qualang-tools>=0.18.0",
    "qualibrate==0.2.0",
    "quam",
    "qutip>=5.2.0",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
quam = { git = "https://github.com/qua-platform/quam.git"}
quam-libs = { workspace = true }

[tool.setuptools.packages.find]
where = ["quam_libs"]
include = ["*"]
exclude = []

[dependency-groups]
dev = [
    "quam-libs",
]
