[project]
name = "quam_libs"
version = "0.1.0"
description = "QuAM Components for Quantum Control"
readme = "README.md"
authors = [
    {name = "Dean Poulos", email = "dean.poulos@quantum-machines.co"}
]
requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.6.6",
    "jupyter>=1.1.1",
    "lmfit>=1.3.3",
    "notebook==7.5.0a0",
    "pennylane>=0.41.1",
    "qiskit==1.4.2",
    "qiskit-experiments>=0.10.0",
    "qm-qua==1.2.2a4",
    "qualang-tools>=0.18.0",
    "qualibrate==0.2.0",
    "quam",
    "qutip>=5.2.0",
    "rsinstrument>=1.102.0",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
]

[tool.uv]
package = true
prerelease = "allow"

[tool.uv.sources]
quam_libs = { path = "./", editable = true }
quam = { git = "https://github.com/qua-platform/quam.git", tag = "v0.4.0" }

[dependency-groups]
dev = [
    "quam_libs",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quam_libs*"]
