[project]
name = "quam_libs"
version = "0.1.0"
dependencies = [
    "quam",
    "qualang-tools>=0.18.0",
    "xarray",
    "lmfit",
    "qiskit-experiments",
    "tqdm",
    "qualibrate==0.2.2",
    "qm-qua==1.2.3",
    "qutip>=5.2.3",
    "picos>=2.6.2",
    "pygsti>=0.9.14.3",
    "mosek>=11.1.9",
    "qiskit<1.0",
    "cvxpy>=1.7.5",
    "pennylane>=0.44.1",
]
requires-python = ">=3.11"

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
quam = { git = "https://github.com/qua-platform/quam.git" }

[tool.hatch.build.targets.wheel]
packages = ["quam_libs"] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
